# VST-PlugIn-Ai

./: .gitignore  01-EXECUTIVE-SUMMARY.md  03-ROADMAP-FASI.md  04-SPECIFICHE-TECNICHE.md  07-CHANGELOG.md  AVVIA-WHYCREMISI.bat  Avvia_Plugin_Standalone.bat  Avvia_WebUI.bat  BUILD_ORGANIZATION.md  Build_Windows.bat  CMakeLists.txt  CMakeLists.txt.windows  Comunicazioni.md  GUIDA-RAPIDA.md  PENDING_TODO.md  Per_Edo_&_Heartbroken.md  README-BUILD.md  README.md  STATUS.md  TEST-GUIDE.md  TEST_CONFERMA.txt  WORKFLOW.md  avvia-ui.bat  build-vst-force.bat  test_offset.js
Documentazione/: 00-INDICE.md  02-ANALISI-MERCATO.md  03-ROADMAP-FASI.md  04-SPECIFICHE-TECNICHE.md  06-BRAINSTORMING.md  07-CHANGELOG.md  08-COORDINAMENTO-TEAM.md  09-GUIDA-SVILUPPO.md  COLLABORAZIONE_HB.md  DAW_VOCABULARY.md  IMPLEMENTATION_GUIDE.md  PROTOCOLLO_AI_MULTI_PROVIDER_v0.1.md  PROTOCOLLO_JSON_v0.1.md  architettura-ponte.md  protocol-json-v1.md
Tools/: README_BOILERPLATE.md
scripts/: send-to-telegram.js
src/ai/: AiEngine.cpp  AiEngine.h
src/bridge/: OscBridge.cpp  OscBridge.h  WebSocketServer.cpp  WebSocketServer.h
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/osc/: OscHandler.cpp  OscHandler.h
src/ui/: WebViewBridge.cpp  WebViewBridge.h
src/ui/Prototipi/Front End Ui Test 1/: README.md  avvia-test-ibrido.bat  package-lock.json  package.json
src/ui/Prototipi/Front End Ui Test 1/src/: App.tsx  index.css  openclaw-bridge.js
src/ui/Prototipi/Front End Ui Test 1/temp_rebirth/: index.html  package-lock.json  package.json
src/ui/Prototipi/Main Prototipo/: MASTER_SPEC - Copia.txt  code.html
src/ui/Prototipi/PLANNING WHYCREMISI/: planning.md
src/ui/Prototipi/Prototipo_1/alien_caramel_protocol/: DESIGN.md
src/ui/Prototipi/Prototipo_1/modular_ai_rack_core_interface_2/: code.html
src/ui/Prototipi/Prototipo_1/openclaw_vst_bridge_ai/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_friendly_terminal_ui/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_output_console/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_vst_1/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_with_example_interaction_1/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_with_example_interaction_2/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_with_integrated_chat_1/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_ai_master_with_integrated_chat_3/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_araxys_protocol_edition/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_compressor_module_1/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_compressor_module_2/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_deep_ai_dialogue_edition/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_full_ai_dialogue_restored/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_iconic_master_gain_edition/: code.html
src/ui/Prototipi/Prototipo_1/whycremisi_neural_eq_module_1/: code.html
src/ui/frontend/: TODO.md  package-lock.json  package.json  vite.config.ts
tests/: mock_websocket_server.py  test_websocket_bridge.py
webview-ui/: index.html  package-lock.json  package.json  vite.config.js
webview-ui/src/: App.css  App.jsx  index.css  openclaw-bridge.js
webview-ui/src/components/: BotFace.jsx  Toolbox.css  Toolbox.jsx  WidgetButton.css  WidgetButton.jsx  WidgetKnob.css  WidgetKnob.jsx  WidgetSlider.css  WidgetSlider.jsx  index.js
(+32 files in other folders)
